# commandcore

./: .env.example  .gitignore  DEPLOYMENT_FIXES.md  README.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: package.json  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/src/: index.ts  test-server.ts
apps/api/src/routes/: agent.ts  deploy.ts  feedback.ts  idea.ts  market.ts  product.ts
apps/api/src/services/: agentService.ts  deployService.ts  feedbackService.ts  ideaService.ts  marketService.ts  productService.ts
apps/api/src/utils/: logger.ts
apps/web/: e2e_dashboard.spec.ts  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
apps/web/app/: ClientLayout.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/api/agents/[agentName]/: route.ts
apps/web/app/api/agents/ideaSpider/: route.ts
apps/web/app/api/auth/[...nextauth]/: route.ts
apps/web/app/api/backend/[...path]/: route.ts
apps/web/app/api/command/: route.ts
apps/web/app/api/scheduler/ideaSpider/: route.ts
apps/web/app/api/stripe/checkout/: route.ts
apps/web/app/api/subscription/: route.ts
apps/web/app/components/: Achievements.tsx  FAQ.tsx  Features.tsx  Hero.tsx  IdeaPickerDemo.tsx  Navbar.tsx  Pricing.tsx  Testimonials.tsx  TrendingIdeas.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/robots.txt/: route.ts
apps/web/app/sitemap.xml/: route.ts
apps/web/app/stripe-success/: page.tsx
apps/web/lib/: auth.ts  getProducts.ts  ideaSpider.ts
apps/web/pages/api/products/: index.ts
apps/web/utils/: getProducts.ts  getServerSession.ts  useSubscription.ts  useTrendingIdeas.ts
docs/: architecture.md
prisma/: schema.prisma
(+1 files in other folders)
